# ai-invention-9708ca-lock-in-extraction-detecting-hallucinate

./: README.md
iter_1/gen_art_dataset_1/: README.md
iter_1/gen_art_dataset_1/demo/: demo_result.json  mini_demo_data.json
iter_1/gen_art_evaluation_1/demo/: demo_result.json  eval_code_demo.ipynb
iter_1/gen_art_evaluation_1/src/: pyproject.toml
iter_1/gen_art_evaluation_1/src/results/: preview_eval_out.json
iter_1/gen_art_experiment_1/: README.md
iter_1/gen_art_experiment_1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
iter_1/gen_art_experiment_1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out
round-1-test-idea/dataset-1/demo/: data_code_demo.ipynb
round-1-test-idea/dataset-1/src/: .terminal_claude_agent_struct_out.json  data.py  data_out.json  preview_data_out.json  pyproject.toml
round-1-test-idea/evaluation-1/: README.md
round-1-test-idea/evaluation-1/demo/: mini_demo_data.json
round-1-test-idea/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_report.md
round-1-test-idea/evaluation-1/src/results/: eval_out.json  method_out.json  metrics_detail.json
round-1-test-idea/experiment-1/src/: method_out_checkpoint.json
