[project]
name = "lockin-extraction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "pandas==3.0.3",
    "loguru==0.7.3",
    "aiohttp==3.14.0",
    "sentence-transformers==5.5.1",
    "datasets==5.0.0",
    "spacy==3.8.14",
    "requests==2.34.2",
    "tqdm==4.68.1",
    "tenacity==9.1.4",
    "wikipedia-api==0.15.0",
    "psutil==7.2.2",
    "torch==2.12.0",
    "transformers==5.10.2",
    "tokenizers==0.22.2",
    "huggingface-hub==1.18.0",
    "pyarrow==24.0.0",
]
